# ZCElectricCmp

./: .gdbinit  Cargo.toml  flake.nix  flash  liq.hex  rust-toolchain.toml
.cargo/: config
src/: board.rs  keys.rs  led.rs  lib.rs  main.rs  main.rsback  main.rsbackrtic  segements.rs  utils.rs
