[package]
name = "liquidled-testrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "rtic", "stm32f103", "medium"]
