[package]
name = "liquidled-testrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.3"
defmt-rtt = "0.4.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.16", default-features = false }
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embassy-executor = { version = "0.1.1", features = ["defmt", "integrated-timers", "nightly"] }
embassy-futures = "0.1.0"
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = "0.2.7"
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "stm32f103rb", "unstable-pac", "memory-x", "time-driver-any"]}
# embedded-hal = "0.2.7"
# nb = "1"
# cortex-m = "0.7.6"
# cortex-m-rt = "0.7.1"
# # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
# cortex-m-rtic = "1.1.4"
#
# [dependencies.stm32f1xx-hal]
# version = "0.10.0"
# features = ["rt", "rtic", "stm32f103", "medium"]

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }

[profile.dev]
opt-level = "s"
